fixing navbar on mobile

--- a/css/mobile-768.css
+++ b/css/mobile-768.css
@@ -124,9 +124,10 @@
   background-repeat: no-repeat;
 
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 60px);
 
   display: flex;
+  flex: 1;
   justify-content: center;
   align-items: center;
 }
@@ -175,13 +176,9 @@
 }
 
 .image-container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: visible!important;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  margin-top: 0px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 footer pre {
