--- a/css/neaelectrolysis.css
+++ b/css/neaelectrolysis.css
@@ -125,7 +125,7 @@ img {
   background-repeat: no-repeat;
 
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 60px);
 
   display: flex;
   justify-content: center;
